--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "pinia": "^2.2.0",
     "vue": "^3.4.29",
     "vue-router": "^4.4.0"
   },
