--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "chart.js": "^4.4.4",
     "pinia": "^2.2.0",
     "vue": "^3.4.29",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.4.0"
   },
   "devDependencies": {
